--- a/2Y_2324_FinalsProject/App.config
+++ b/2Y_2324_FinalsProject/App.config
@@ -6,6 +6,9 @@
         <add name="_2Y_2324_FinalsProject.Properties.Settings.PRMSConnectionString"
             connectionString="Data Source=EVANLAPTOP\SQLEXPRESS;Initial Catalog=PRMS;Integrated Security=True;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
+        <add name="_2Y_2324_FinalsProject.Properties.Settings.FinalsConnectionString"
+            connectionString="Data Source=EVANLAPTOP\SQLEXPRESS;Initial Catalog=Finals;Integrated Security=True;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
