Known bugs: File upload, need to create unique filename

--- a/2Y_2324_FinalsProject/2Y_2324_FinalsProject.csproj
+++ b/2Y_2324_FinalsProject/2Y_2324_FinalsProject.csproj
@@ -127,9 +127,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\logo.jpg" />
-  </ItemGroup>
-  <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <ItemGroup>
@@ -158,6 +155,9 @@
   <ItemGroup>
     <Resource Include="Images\admin.png" />
     <Resource Include="Images\patient.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
