--- a/2Y_2324_FinalsProject/App.config
+++ b/2Y_2324_FinalsProject/App.config
@@ -7,7 +7,7 @@
             connectionString="Data Source=EVANLAPTOP\SQLEXPRESS;Initial Catalog=PRMS;Integrated Security=True;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
         <add name="_2Y_2324_FinalsProject.Properties.Settings.FinalsConnectionString"
-            connectionString="Data Source=EVANLAPTOP\SQLEXPRESS;Initial Catalog=Finals;Integrated Security=True;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True"
+            connectionString="Data Source=LAPTOP-GB9EBM46\SQLEXPRESS;Initial Catalog=Finals;Integrated Security=True;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
